<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.himja.sense_it.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/song_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="8dp"
        android:text="@string/song_2"
        app:layout_constraintBottom_toTopOf="@+id/song_3"
        app:layout_constraintEnd_toStartOf="@+id/song_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_1"
        android:layout_marginRight="8dp" />

    <ImageButton
        android:id="@+id/pause_button"
        style="@android:style/MediaButton.Pause"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="117dp"
        android:background="@android:color/darker_gray"
        android:onClick="onPauseButtonClicked"
        android:src="@android:drawable/ic_media_pause"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="@+id/play_button" />

    <ImageButton
        android:id="@+id/play_button"
        style="@android:style/MediaButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="91dp"
        android:backgroundTint="@android:color/darker_gray"
        android:onClick="onPlaybackButtonClicked"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toTopOf="@+id/sense_it"
        app:layout_constraintEnd_toStartOf="@+id/pause_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_5"
        tools:targetApi="lollipop" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/song_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/song_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/song_1"
        app:layout_constraintBottom_toTopOf="@+id/song_2"
        app:layout_constraintEnd_toStartOf="@+id/song_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <Button
        android:id="@+id/song_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="8dp"
        android:text="@string/song_3"
        app:layout_constraintBottom_toTopOf="@+id/song_4"
        app:layout_constraintEnd_toStartOf="@+id/song_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_2" />

    <Button
        android:id="@+id/song_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/song_4"
        app:layout_constraintBottom_toTopOf="@+id/song_5"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_3" />

    <Button
        android:id="@+id/song_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="8dp"
        android:text="@string/song_5"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@+id/song_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_4" />

    <Button
        android:id="@+id/song_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:text="@string/song_6"
        app:layout_constraintBottom_toBottomOf="@+id/song_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/song_1"
        app:layout_constraintTop_toTopOf="@+id/song_1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/song_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="20dp"
        android:text="@string/song_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/song_2"
        app:layout_constraintTop_toBottomOf="@+id/song_6" />

    <Button
        android:id="@+id/song_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="19dp"
        android:text="@string/song_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/song_3"
        app:layout_constraintTop_toBottomOf="@+id/song_7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="18dp"
        android:text="@string/song_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/song_4"
        app:layout_constraintTop_toBottomOf="@+id/song_8" />

    <Button
        android:id="@+id/song_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="24dp"
        android:text="@string/song_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/song_5"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/sense_it"
        android:layout_width="156dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:onClick="senseItButton"
        android:text="@string/sense_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

</android.support.constraint.ConstraintLayout>
